# openclip

./: .env.example  .gitignore  AGENTS.md  AGENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  llms.txt  pyproject.toml  seed.openclip.yaml  skills-lock.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: assembler.md  orchestrator.md  thumbnail-artist.md  tool-auditor.md  verifier.md
.claude/skills/: oc  oc-assembler  oc-cut-judge  oc-cut-proposer  oc-hook-finder  oc-orchestrator  oc-proxy-converter  oc-stt-worker  oc-subtitle-agent  (+4 more)
.codex/: config.toml  hooks.json
.github/: pull_request_template.md
agents/: assembler.md  cut-judge.md  cut-proposer.md  hook-finder.md  toolsmith.md  verifier.md
commands/: oc-assemble.md  oc-cutedit.md  oc-shorts.md  oc-thumbnail.md  oc.md
docs/: HARNESS.md  index.html
flows/: flow1-cutedit.yaml  flow3-assemble.yaml
hooks/: plugin-hooks.json  verify_evidence_hook.py
scripts/: sync_agents.py
skills/: oc  oc-assembler  oc-cut-judge  oc-cut-proposer  oc-hook-finder  oc-orchestrator  oc-proxy-converter  oc-stt-worker  oc-subtitle-agent  oc-thumbnail-artist  oc-tool-auditor  oc-toolsmith  oc-verifier
tests/: test_domain_pack.py  test_oc_cli.py  test_oc_tools.py  test_openclip_public_api.py  test_pipeline.py  test_publication_urls.py  test_run_wrapper.py  test_subagent_packets.py  test_subtitles.py  test_sync_agents.py  test_verify_evidence_hook.py
toolbox/: learnings.jsonl  registry.json
(+69 files in other folders)
