[project]
name = "openclip-agent"
version = "0.2.4"
description = "Open-source CLI for turning long videos into shorts, long-form candidates, subtitles, thumbnails, and review packets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
openclip = "openclip.cli:main"
oc = "openclip.harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openclip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
